--- a/resources/ui/CPPR.ui
+++ b/resources/ui/CPPR.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>661</width>
-    <height>450</height>
+    <width>700</width>
+    <height>513</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>661</width>
-    <height>450</height>
+    <width>700</width>
+    <height>513</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>661</width>
-    <height>450</height>
+    <width>700</width>
+    <height>513</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -35,144 +35,244 @@ background-image: url(:/logos/karatau_logo_small___копия-removebg-preview.p
    <property name="styleSheet">
     <string notr="true"/>
    </property>
-   <widget class="QLabel" name="labelMap">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
+   <widget class="QPushButton" name="privetstvieButton">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>761</width>
-      <height>481</height>
+      <x>10</x>
+      <y>50</y>
+      <width>161</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>761</width>
-      <height>481</height>
+      <width>0</width>
+      <height>30</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>761</width>
-      <height>481</height>
+      <width>16777198</width>
+      <height>16777215</height>
      </size>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-image: url(:/Maps/images/Maps/Каратау.jpg)</string>
+     <string notr="true">QPushButton{
+color: rgb(0, 0, 0);
+background-color: rgb(246, 250, 5);
+background-image: url(:/arrow right/images/Karatau yellow background.png);
+border-style:outset;
+border-radius:10px;
+font: 100 14pt &quot;Arial&quot; ;
+}
+QPushButton:hover{
+color:rgb(0, 0, 05);
+background-color: rgb(245, 169, 17);
+border-radius:5px;
+}
+QPushButton:pressed{
+color:rgb(0, 0, 0);
+background-color: rgb(255, 148, 164);
+}</string>
+    </property>
+    <property name="text">
+     <string>Приветствие</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="sorbciaButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>100</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+color: rgb(0, 0, 0);
+background-color: rgb(246, 250, 5);
+background-image: url(:/arrow right/images/Karatau yellow background.png);
+border-style:outset;
+border-radius:10px;
+font: 100 14pt &quot;Arial&quot; ;
+}
+QPushButton:hover{
+color:rgb(0, 0, 05);
+background-color: rgb(245, 169, 17);
+border-radius:5px;
+}
+QPushButton:pressed{
+color:rgb(0, 0, 0);
+background-color: rgb(255, 148, 164);
+}</string>
+    </property>
+    <property name="text">
+     <string>Сорбция</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="desorbciaButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>150</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+color: rgb(0, 0, 0);
+background-color: rgb(246, 250, 5);
+background-image: url(:/arrow right/images/Karatau yellow background.png);
+border-style:outset;
+border-radius:10px;
+font: 100 14pt &quot;Arial&quot; ;
+}
+QPushButton:hover{
+color:rgb(0, 0, 05);
+background-color: rgb(245, 169, 17);
+border-radius:5px;
+}
+QPushButton:pressed{
+color:rgb(0, 0, 0);
+background-color: rgb(255, 148, 164);
+}</string>
+    </property>
+    <property name="text">
+     <string>Десорбция</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Logos">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>450</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {url(:/logos/logos-2.png);}</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../Maps.qrc">:/Maps/images/Maps/Каратау.jpg</pixmap>
+     <pixmap resource="../logos.qrc">:/logos/logos-2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>90</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>0</width>
-      <height>30</height>
-     </size>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-background-image: url(:/arrow right/Karatau blue background.png);
-color: rgb(0, 0, 0);
-background-color: rgb(65, 102, 245);
-border-style:outset;
-border-radius:10px;
-font: 100 14pt &quot;Arial&quot; ;
-}
-QPushButton:hover{
-color:rgb(0, 0, 05);
-background-color: rgb(245, 169, 17);
-border-radius:5px;
-}
-QPushButton:pressed{
-color:rgb(0, 0, 0);
-background-color: rgb(255, 148, 164);
-border-radius:20px;
-}</string>
-    </property>
-    <property name="text">
-     <string>Произодство</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="vakhtoviiPoselokButton">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>240</y>
-      <width>181</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>0</width>
-      <height>30</height>
-     </size>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-background-image: url(:/arrow right/Karatau blue background.png);
-color: rgb(0, 0, 0);
-background-color: rgb(65, 102, 245);
-border-style:outset;
-border-radius:10px;
-font: 100 14pt &quot;Arial&quot; ;
-}
-QPushButton:hover{
-color:rgb(0, 0, 05);
-background-color: rgb(245, 169, 17);
-border-radius:5px;
-}
-QPushButton:pressed{
-color:rgb(0, 0, 0);
-background-color: rgb(255, 148, 164);
-border-radius:20px;
-}</string>
-    </property>
-    <property name="text">
-     <string>Вахтовый Поселок</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>130</y>
-      <width>201</width>
-      <height>31</height>
+      <x>180</x>
+      <y>0</y>
+      <width>521</width>
+      <height>511</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-image: url(:/arrow right/Karatau blue background.png);
-color: rgb(0, 0, 0);
-background-color: rgb(65, 102, 245);
-font: 100 14pt &quot;Arial&quot; </string>
+     <string notr="true">Background-image:url(:/Maps/images/Maps/ЦППР.jpg)</string>
     </property>
     <property name="text">
-     <string>  Поселок РосБорМаш</string>
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../Maps.qrc">:/Maps/images/Maps/ЦППР.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="podgotovkaButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>200</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+color: rgb(0, 0, 0);
+background-color: rgb(246, 250, 5);
+background-image: url(:/arrow right/images/Karatau yellow background.png);
+border-style:outset;
+border-radius:10px;
+font: 100 14pt &quot;Arial&quot; ;
+}
+QPushButton:hover{
+color:rgb(0, 0, 05);
+background-color: rgb(245, 169, 17);
+border-radius:5px;
+}
+QPushButton:pressed{
+color:rgb(0, 0, 0);
+background-color: rgb(255, 148, 164);
+}</string>
+    </property>
+    <property name="text">
+     <string>Подготовка</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ssrButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>250</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+color: rgb(0, 0, 0);
+background-color: rgb(246, 250, 5);
+background-image: url(:/arrow right/images/Karatau yellow background.png);
+border-style:outset;
+border-radius:10px;
+font: 100 14pt &quot;Arial&quot; ;
+}
+QPushButton:hover{
+color:rgb(0, 0, 05);
+background-color: rgb(245, 169, 17);
+border-radius:5px;
+}
+QPushButton:pressed{
+color:rgb(0, 0, 0);
+background-color: rgb(255, 148, 164);
+}</string>
+    </property>
+    <property name="text">
+     <string>ССР</string>
     </property>
    </widget>
   </widget>
@@ -243,10 +343,7 @@ font: 100 14pt &quot;Arial&quot; </string>
  <resources>
   <include location="../logos.qrc"/>
   <include location="../Maps.qrc"/>
-  <include location="../GTP.qrc"/>
   <include location="../MainWindow.qrc"/>
-  <include location="../MainWindowResize.qrc"/>
-  <include location="../../../../../.designer/Maps.qrc"/>
  </resources>
  <connections/>
 </ui>
