--- a/resources/ui/Proizvodstvo.ui
+++ b/resources/ui/Proizvodstvo.ui
@@ -60,19 +60,19 @@ background-image: url(:/logos/karatau_logo_small___копия-removebg-preview.p
      </size>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-image: url(:/Maps/Производство.JPG)</string>
+     <string notr="true">background-image: url(:/Maps/images/Maps/Производство.JPG)</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../Maps.qrc">:/Maps/Производство.JPG</pixmap>
+     <pixmap resource="../Maps.qrc">:/Maps/images/Maps/Производство.JPG</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton">
+   <widget class="QPushButton" name="cpprButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -114,7 +114,7 @@ border-radius:20px;
      <string>ЦППР</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="centSkladLabel">
     <property name="geometry">
      <rect>
       <x>470</x>
@@ -133,7 +133,7 @@ font: 100 14pt &quot;Arial&quot; </string>
      <string>  Цент. Склад</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton_2">
+   <widget class="QPushButton" name="tnsButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -175,7 +175,7 @@ border-radius:20px;
      <string>ТНС</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton_3">
+   <widget class="QPushButton" name="apButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -217,7 +217,7 @@ border-radius:20px;
      <string>АП</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton_4">
+   <widget class="QPushButton" name="ssrButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -259,7 +259,7 @@ border-radius:20px;
      <string>ССР</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton_5">
+   <widget class="QPushButton" name="fkhlButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -301,7 +301,7 @@ border-radius:20px;
      <string>ФХЛ</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton_6">
+   <widget class="QPushButton" name="szhrButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -343,7 +343,7 @@ border-radius:20px;
      <string>СЖР</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="proizvodstvoButton_7">
+   <widget class="QPushButton" name="cnsButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -385,7 +385,7 @@ border-radius:20px;
      <string>ЦНС</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="hbkLabel">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -404,7 +404,7 @@ font: 100 14pt &quot;Arial&quot; </string>
      <string>  ХБК</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="kppLabel">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -423,7 +423,7 @@ font: 100 14pt &quot;Arial&quot; </string>
      <string>  КПП</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="techVodaLabel">
     <property name="geometry">
      <rect>
       <x>240</x>
@@ -442,7 +442,7 @@ font: 100 14pt &quot;Arial&quot; </string>
      <string>Тех. Вода</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
+   <widget class="QLabel" name="avtoboksLabel">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -461,7 +461,7 @@ font: 100 14pt &quot;Arial&quot; </string>
      <string> Автобокс</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="abkLabel">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -480,7 +480,7 @@ font: 100 14pt &quot;Arial&quot; </string>
      <string> АБК</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QLabel" name="sukhSkladLabel">
     <property name="geometry">
      <rect>
       <x>530</x>
@@ -570,7 +570,6 @@ font: 100 14pt &quot;Arial&quot; </string>
   <include location="../GTP.qrc"/>
   <include location="../MainWindow.qrc"/>
   <include location="../MainWindowResize.qrc"/>
-  <include location="../Maps.qrc"/>
  </resources>
  <connections/>
 </ui>
