--- a/resources/ui/CPPR.ui
+++ b/resources/ui/CPPR.ui
@@ -187,13 +187,13 @@ background-color: rgb(255, 148, 164);
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">Background-image:url(:/Maps/images/Maps/ЦППР.jpg)</string>
+     <string notr="true">Background-image:url(:/MapsResize/images/MapsУмень/ЦППР.jpg)</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../Maps.qrc">:/Maps/images/Maps/ЦППР.jpg</pixmap>
+     <pixmap resource="../MapsResize.qrc">:/MapsResize/images/MapsУмень/ЦППР.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -342,7 +342,7 @@ background-color: rgb(255, 148, 164);
  </widget>
  <resources>
   <include location="../logos.qrc"/>
-  <include location="../Maps.qrc"/>
+  <include location="../MapsResize.qrc"/>
   <include location="../MainWindow.qrc"/>
  </resources>
  <connections/>
