--- a/resources/ui/FKhL.ui
+++ b/resources/ui/FKhL.ui
@@ -149,13 +149,13 @@ background-color: rgb(255, 148, 164);
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">Background-image:url(:/Maps/images/Maps/ФХЛ.JPG)</string>
+     <string notr="true">Background-image:url(:/MapsResize/images/MapsУмень/ФХЛ.jpg)</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../Maps.qrc">:/Maps/images/Maps/ФХЛ.JPG</pixmap>
+     <pixmap resource="../MapsResize.qrc">:/MapsResize/images/MapsУмень/ФХЛ.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -266,7 +266,7 @@ background-color: rgb(255, 148, 164);
  </widget>
  <resources>
   <include location="../logos.qrc"/>
-  <include location="../Maps.qrc"/>
+  <include location="../MapsResize.qrc"/>
   <include location="../MainWindow.qrc"/>
  </resources>
  <connections/>
