--- a/resources/ui/AP.ui
+++ b/resources/ui/AP.ui
@@ -183,17 +183,17 @@ background-color: rgb(255, 148, 164);
       <x>190</x>
       <y>0</y>
       <width>511</width>
-      <height>511</height>
+      <height>521</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">Background-image:url(:/Maps/images/Maps/АП.jpg)</string>
+     <string notr="true">Background-image:url(:/MapsResize/images/MapsУмень/АП.jpg)</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../Maps.qrc">:/Maps/images/Maps/АП.jpg</pixmap>
+     <pixmap resource="../MapsResize.qrc">:/MapsResize/images/MapsУмень/АП.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -342,7 +342,7 @@ background-color: rgb(255, 148, 164);
  </widget>
  <resources>
   <include location="../logos.qrc"/>
-  <include location="../Maps.qrc"/>
+  <include location="../MapsResize.qrc"/>
   <include location="../MainWindow.qrc"/>
  </resources>
  <connections/>
