--- a/resources/ui/Poselok.ui
+++ b/resources/ui/Poselok.ui
@@ -6,86 +6,116 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>513</height>
+    <width>800</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>700</width>
-    <height>513</height>
+    <width>800</width>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>700</width>
-    <height>513</height>
+    <width>800</width>
+    <height>500</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget{
-background-color: rgb(65, 102, 245);
-background-image: url(:/logos/karatau_logo_small___копия-removebg-preview.png)
-}</string>
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="minimumSize">
+    <size>
+     <width>800</width>
+     <height>500</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>800</width>
+     <height>16777215</height>
+    </size>
+   </property>
    <property name="styleSheet">
     <string notr="true"/>
    </property>
-   <widget class="QPushButton" name="privetstvieButton">
+   <widget class="QLabel" name="labelMap">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>120</y>
-      <width>171</width>
-      <height>31</height>
+      <x>0</x>
+      <y>0</y>
+      <width>800</width>
+      <height>500</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>0</width>
-      <height>30</height>
+      <width>800</width>
+      <height>500</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>16777198</width>
+      <width>800</width>
+      <height>500</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/MapsResize/images/MapsУмень/Вахтовый Поселок.jpg)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../MapsResize.qrc">:/MapsResize/images/MapsУмень/Вахтовый Поселок.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="obshezhitieLabel">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>340</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>700</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
+     <string notr="true">background-image: url(:/arrow right/Karatau blue background.png);
 color: rgb(0, 0, 0);
-background-color: rgb(246, 250, 5);
-background-image: url(:/arrow right/images/Karatau yellow background.png);
-border-style:outset;
-border-radius:10px;
-font: 100 14pt &quot;Arial&quot; ;
-}
-QPushButton:hover{
-color:rgb(0, 0, 05);
-background-color: rgb(245, 169, 17);
-border-radius:5px;
-}
-QPushButton:pressed{
-color:rgb(0, 0, 0);
-background-color: rgb(255, 148, 164);
-}</string>
+background-color: rgb(65, 102, 245);
+font: 100 14pt &quot;Arial&quot; </string>
     </property>
     <property name="text">
-     <string>Приветствие</string>
+     <string> Общежитие</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="szhrButton">
+   <widget class="QPushButton" name="gbkButton">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>170</y>
-      <width>171</width>
-      <height>31</height>
+      <x>540</x>
+      <y>350</y>
+      <width>61</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="minimumSize">
@@ -96,9 +126,9 @@ background-color: rgb(255, 148, 164);
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
+background-image: url(:/arrow right/Karatau blue background.png);
 color: rgb(0, 0, 0);
-background-color: rgb(246, 250, 5);
-background-image: url(:/arrow right/images/Karatau yellow background.png);
+background-color: rgb(65, 102, 245);
 border-style:outset;
 border-radius:10px;
 font: 100 14pt &quot;Arial&quot; ;
@@ -111,54 +141,68 @@ border-radius:5px;
 QPushButton:pressed{
 color:rgb(0, 0, 0);
 background-color: rgb(255, 148, 164);
+border-radius:20px;
 }</string>
     </property>
     <property name="text">
-     <string>ССР</string>
+     <string>ГБК</string>
     </property>
    </widget>
-   <widget class="QLabel" name="Logos">
+   <widget class="QLabel" name="sportKompleksLabel">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>450</y>
+      <x>200</x>
+      <y>250</y>
+      <width>201</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/arrow right/Karatau blue background.png);
+color: rgb(0, 0, 0);
+background-color: rgb(65, 102, 245);
+font: 100 14pt &quot;Arial&quot; </string>
+    </property>
+    <property name="text">
+     <string>Спортивный комплекс</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="kottedzhiLabel">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>140</y>
       <width>101</width>
-      <height>41</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLabel {url(:/logos/logos-2.png);}</string>
+     <string notr="true">background-image: url(:/arrow right/Karatau blue background.png);
+color: rgb(0, 0, 0);
+background-color: rgb(65, 102, 245);
+font: 100 14pt &quot;Arial&quot; </string>
     </property>
     <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="../logos.qrc">:/logos/logos-2.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
+     <string>  Коттеджи</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="techVodaLabel_2">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>0</y>
-      <width>511</width>
-      <height>511</height>
+      <x>580</x>
+      <y>200</y>
+      <width>91</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">Background-image:url(:/MapsResize/images/MapsУмень/ССР.jpg)</string>
+     <string notr="true">background-image: url(:/arrow right/Karatau blue background.png);
+color: rgb(0, 0, 0);
+background-color: rgb(65, 102, 245);
+font: 100 14pt &quot;Arial&quot; </string>
     </property>
     <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="../MapsResize.qrc">:/MapsResize/images/MapsУмень/ССР.jpg</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
+     <string>Тех. Вода</string>
     </property>
    </widget>
   </widget>
@@ -228,8 +272,11 @@ background-color: rgb(255, 148, 164);
  </widget>
  <resources>
   <include location="../logos.qrc"/>
-  <include location="../MainWindow.qrc"/>
   <include location="../MapsResize.qrc"/>
+  <include location="../Maps.qrc"/>
+  <include location="../GTP.qrc"/>
+  <include location="../MainWindow.qrc"/>
+  <include location="../MainWindowResize.qrc"/>
  </resources>
  <connections/>
 </ui>
