--- a/resources/ui/TNS.ui
+++ b/resources/ui/TNS.ui
@@ -149,13 +149,13 @@ background-color: rgb(255, 148, 164);
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">Background-image:url(:/Maps/images/Maps/ТНС.JPG)</string>
+     <string notr="true">Background-image:url(:/MapsResize/images/MapsУмень/ТНС.jpg)</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../Maps.qrc">:/Maps/images/Maps/ТНС.JPG</pixmap>
+     <pixmap resource="../MapsResize.qrc">:/MapsResize/images/MapsУмень/ТНС.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -228,8 +228,8 @@ background-color: rgb(255, 148, 164);
  </widget>
  <resources>
   <include location="../logos.qrc"/>
-  <include location="../Maps.qrc"/>
   <include location="../MainWindow.qrc"/>
+  <include location="../MapsResize.qrc"/>
  </resources>
  <connections/>
 </ui>
