--- a/resources/ASUTP.qrc
+++ b/resources/ASUTP.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="ASUTP">
+    <file>../images/АСУТП/Деятельность.png</file>
+    <file>../images/АСУТП/Оборудование.png</file>
     <file>../images/АСУТП/Структура.png</file>
     <file>../images/АСУТП/АСУТП.jpg</file>
   </qresource>
